# python-selfcompletion

./: .gitignore  README  TODO  setup.cfg
bash_completion.d/: _selfcompletion
selfcompletion/: __init__.py
selfcompletion/test/: test_completing.py
