[metadata]
name = selfcompletion
version = 0.0.1
author = David Barnett
author_email = davidbarnett2@gmail.com
summary = Automatically-generated command completion built on argparse
description-file = README
home_page = http://github.com/dbarnett/python-selfcompletion

classifier = License :: OSI Approved :: BSD License
    Development Status :: 2 - Pre-Alpha

requires-dist = argparse; python_version < '2.7'

[files]

packages = selfcompletion
extra_files =

resources =

